reviews/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-active
  labels:
    app: reviews-active
    service: reviews-active
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: reviews
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-preview
  labels:
    app: reviews-preview
    service: reviews-preview
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: reviews-preview
