reviews/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-virtualservice
spec:
  gateways:
    - istio-rollout-gateway
  hosts:
    - "*"
  http:
    - name: primary
      route:
        - destination:
            host: reviews-active
          weight: 100
        - destination:
            host: reviews-preview
          weight: 0
